[gd_scene load_steps=9 format=3 uid="uid://dfr8is0qd2nqw"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_5bt7j"]
[ext_resource type="Texture2D" uid="uid://drpfqn7nesv57" path="res://World/ice.png" id="2_othh7"]
[ext_resource type="Texture2D" uid="uid://dnajo6qu8xb5u" path="res://World/Player/player.png" id="3_308no"]
[ext_resource type="AudioStream" uid="uid://bjoeao0fokwrx" path="res://Audio/click.wav" id="3_d6qi7"]
[ext_resource type="AudioStream" uid="uid://bkjnaigha7sbo" path="res://Music/Ice Cave.mp3" id="4_irfoj"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vejq1"]
texture = ExtResource("2_othh7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_jybhu"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_vejq1")

[sub_resource type="LabelSettings" id="LabelSettings_xqec3"]
font_size = 55

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5bt7j")

[node name="Background" type="TextureRect" parent="."]
modulate = Color(0.294118, 0.294118, 0.294118, 1)
layout_mode = 0
offset_right = 950.0
offset_bottom = 650.0
texture = ExtResource("2_othh7")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_jybhu")
format = 2
layer_0/tile_data = PackedInt32Array(1114112, 0, 0, 1179648, 0, 0, 1245184, 0, 0, 1310720, 0, 0, 1114113, 0, 0, 1179649, 0, 0, 1245185, 0, 0, 1310721, 0, 0, 1114114, 0, 0, 1179650, 0, 0, 1245186, 0, 0, 1310722, 0, 0, 1114115, 0, 0, 1179651, 0, 0, 1245187, 0, 0, 1310723, 0, 0, 1114116, 0, 0, 1179652, 0, 0, 1245188, 0, 0, 1310724, 0, 0, 1114117, 0, 0, 1179653, 0, 0, 1245189, 0, 0, 1310725, 0, 0, 1114118, 0, 0, 1179654, 0, 0, 1245190, 0, 0, 1310726, 0, 0, 1114119, 0, 0, 1179655, 0, 0, 1245191, 0, 0, 1310727, 0, 0, 1114120, 0, 0, 1179656, 0, 0, 1245192, 0, 0, 1310728, 0, 0, 1114121, 0, 0, 1179657, 0, 0, 1245193, 0, 0, 1310729, 0, 0, 1114122, 0, 0, 1179658, 0, 0, 1245194, 0, 0, 1310730, 0, 0, 1114123, 0, 0, 1179659, 0, 0, 1245195, 0, 0, 1310731, 0, 0, 1114124, 0, 0, 1179660, 0, 0, 1245196, 0, 0, 1310732, 0, 0, 1114125, 0, 0, 1179661, 0, 0, 1245197, 0, 0, 1310733, 0, 0, 1114126, 0, 0, 1179662, 0, 0, 1245198, 0, 0, 1310734, 0, 0, 1114127, 0, 0, 1179663, 0, 0, 1245199, 0, 0, 1310735, 0, 0, 1114128, 0, 0, 1179664, 0, 0, 1245200, 0, 0, 1310736, 0, 0, 1114129, 0, 0, 1179665, 0, 0, 1245201, 0, 0, 1310737, 0, 0, 1114130, 0, 0, 1179666, 0, 0, 1245202, 0, 0, 1310738, 0, 0, 1114131, 0, 0, 1179667, 0, 0, 1245203, 0, 0, 1310739, 0, 0, 1114132, 0, 0, 1179668, 0, 0, 1245204, 0, 0, 1310740, 0, 0, 1114133, 0, 0, 1179669, 0, 0, 1245205, 0, 0, 1310741, 0, 0, 1114134, 0, 0, 1179670, 0, 0, 1245206, 0, 0, 1310742, 0, 0, 1114135, 0, 0, 1179671, 0, 0, 1245207, 0, 0, 1310743, 0, 0, 1114136, 0, 0, 1179672, 0, 0, 1245208, 0, 0, 1310744, 0, 0, 1114137, 0, 0, 1179673, 0, 0, 1245209, 0, 0, 1310745, 0, 0, 1114138, 0, 0, 1179674, 0, 0, 1245210, 0, 0, 1310746, 0, 0, 1114139, 0, 0, 1179675, 0, 0, 1245211, 0, 0, 1310747, 0, 0, 1114140, 0, 0, 1179676, 0, 0, 1245212, 0, 0, 1310748, 0, 0, 1114141, 0, 0, 1179677, 0, 0, 1245213, 0, 0, 1310749, 0, 0, 0, 0, 0, 65536, 0, 0, 131072, 0, 0, 196608, 0, 0, 262144, 0, 0, 327680, 0, 0, 393216, 0, 0, 458752, 0, 0, 524288, 0, 0, 589824, 0, 0, 655360, 0, 0, 720896, 0, 0, 786432, 0, 0, 851968, 0, 0, 917504, 0, 0, 983040, 0, 0, 1048576, 0, 0, 1, 0, 0, 65537, 0, 0, 131073, 0, 0, 196609, 0, 0, 262145, 0, 0, 327681, 0, 0, 393217, 0, 0, 458753, 0, 0, 524289, 0, 0, 589825, 0, 0, 655361, 0, 0, 720897, 0, 0, 786433, 0, 0, 851969, 0, 0, 917505, 0, 0, 983041, 0, 0, 1048577, 0, 0, 28, 0, 0, 65564, 0, 0, 131100, 0, 0, 196636, 0, 0, 262172, 0, 0, 327708, 0, 0, 393244, 0, 0, 458780, 0, 0, 524316, 0, 0, 589852, 0, 0, 655388, 0, 0, 720924, 0, 0, 786460, 0, 0, 851996, 0, 0, 917532, 0, 0, 983068, 0, 0, 1048604, 0, 0, 29, 0, 0, 65565, 0, 0, 131101, 0, 0, 196637, 0, 0, 262173, 0, 0, 327709, 0, 0, 393245, 0, 0, 458781, 0, 0, 524317, 0, 0, 589853, 0, 0, 655389, 0, 0, 720925, 0, 0, 786461, 0, 0, 851997, 0, 0, 917533, 0, 0, 983069, 0, 0, 1048605, 0, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(234, 507)
texture = ExtResource("3_308no")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(475, 325)

[node name="Main" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Main"]
layout_mode = 2
anchor_left = 0.5
anchor_right = 0.5
offset_left = 217.0
offset_top = 84.0
offset_right = 693.0
offset_bottom = 194.0
grow_horizontal = 2
text = "Walking on Ice"
label_settings = SubResource("LabelSettings_xqec3")
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="Main"]
visible = false
offset_right = 952.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="Main"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 395.0
offset_top = 347.0
offset_right = 516.0
offset_bottom = 394.0
grow_horizontal = 2
grow_vertical = 0
text = "Play"

[node name="ControlButton" type="Button" parent="Main"]
layout_mode = 2
offset_left = 415.0
offset_top = 466.0
offset_right = 536.0
offset_bottom = 509.0
text = "Controls"

[node name="Controls" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 217.0
offset_top = 82.0
offset_right = 693.0
offset_bottom = 192.0
grow_horizontal = 2
text = "Controls"
label_settings = SubResource("LabelSettings_xqec3")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Controls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 255.0
offset_right = 931.0
offset_bottom = 532.0
grow_horizontal = 2
grow_vertical = 2
text = "Use the A & D or arrow keys to move. Press Space to jump.

To perform a wall jump, run towards a wall and jump, then
press Space when touching the wall to wall jump.

You can press Esc to pause."
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="Controls"]
layout_mode = 0
offset_left = 415.0
offset_top = 492.0
offset_right = 536.0
offset_bottom = 535.0
text = "Back"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_d6qi7")

[node name="IceCaveMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_irfoj")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8

[connection signal="pressed" from="Main/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Main/ControlButton" to="." method="_on_control_button_pressed"]
[connection signal="pressed" from="Controls/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
